Se agregan los casos de uso para el servicio de cuentas

--- a/src/Services/AccountService/SG.AccountService.Application/SG.AccountService.Application.csproj
+++ b/src/Services/AccountService/SG.AccountService.Application/SG.AccountService.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SG.AccountService.Domain\SG.AccountService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
