--- a/src/Services/AccountService/SG.AccountService.Infrastructure/SG.AccountService.Infrastructure.csproj
+++ b/src/Services/AccountService/SG.AccountService.Infrastructure/SG.AccountService.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SG.AccountService.Application\SG.AccountService.Application.csproj" />
     <ProjectReference Include="..\SG.AccountService.Domain\SG.AccountService.Domain.csproj" />
   </ItemGroup>
 
