Capa API del servicio de cuentas: Se agrega el Program.cs y configuración del JWT

--- a/src/Services/AccountService/SG.AccountService.API/SG.AccountService.API.csproj
+++ b/src/Services/AccountService/SG.AccountService.API/SG.AccountService.API.csproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.24" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.24">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SG.AccountService.Application\SG.AccountService.Application.csproj" />
+    <ProjectReference Include="..\SG.AccountService.Infrastructure\SG.AccountService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
