Implemento secrets para la cadena de conexión y la clave del jwt

--- a/src/Services/AccountService/SG.AccountService.API/appsettings.json
+++ b/src/Services/AccountService/SG.AccountService.API/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SG_Financial_AccountDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "CADENA_DE_CONEXION"
   },
   "Jwt": {
-    "Key": "#ClaveSuperSecretaYLargaParaElChallengeDeSGFinancial2026!!!",
+    "Key": "USER_SECRET",
     "Issuer": "SGFinancial.AuthService",
     "Audience": "SGFinancial.AccountService"
   },
