Capa API del servicio de cuentas: Mejoro la documentación en swagger de los endpoints

--- a/src/Services/AccountService/SG.AccountService.API/SG.AccountService.API.csproj
+++ b/src/Services/AccountService/SG.AccountService.API/SG.AccountService.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>23155ce5-fbb9-4b96-a1ee-dfb9cf9c360b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
