--- a/src/Services/AuthService/tests/SG.AuthService.UnitTests/SG.AuthService.UnitTests.csproj
+++ b/src/Services/AuthService/tests/SG.AuthService.UnitTests/SG.AuthService.UnitTests.csproj
@@ -7,4 +7,26 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="coverlet.collector" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="FluentAssertions" Version="8.8.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+      <PackageReference Include="xunit" Version="2.5.3" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Using Include="Xunit"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\..\SG.AuthService.Domain\SG.AuthService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
