--- a/src/Services/AuthService/SG.AuthService.Infrastructure/SG.AuthService.Infrastructure.csproj
+++ b/src/Services/AuthService/SG.AuthService.Infrastructure/SG.AuthService.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SG.AuthService.Domain\SG.AuthService.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.24" />
+    </ItemGroup>
+
 </Project>
