Capa de casos de uso del servicio de auth: Se agrega la implementación de authService

--- a/src/Services/AuthService/SG.AuthService.Application/SG.AuthService.Application.csproj
+++ b/src/Services/AuthService/SG.AuthService.Application/SG.AuthService.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SG.AuthService.Domain\SG.AuthService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
