--- a/src/Services/AuthService/SG.AuthService.Infrastructure/SG.AuthService.Infrastructure.csproj
+++ b/src/Services/AuthService/SG.AuthService.Infrastructure/SG.AuthService.Infrastructure.csproj
@@ -7,10 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SG.AuthService.Application\SG.AuthService.Application.csproj" />
       <ProjectReference Include="..\SG.AuthService.Domain\SG.AuthService.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.24" />
     </ItemGroup>
