--- a/src/Services/AuthService/SG.AuthService.API/SG.AuthService.API.csproj
+++ b/src/Services/AuthService/SG.AuthService.API/SG.AuthService.API.csproj
@@ -7,4 +7,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.9" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SG.AuthService.Application\SG.AuthService.Application.csproj" />
+    </ItemGroup>
+
 </Project>
