--- a/src/Services/AuthService/tests/SG.AuthService.UnitTests/SG.AuthService.UnitTests.csproj
+++ b/src/Services/AuthService/tests/SG.AuthService.UnitTests/SG.AuthService.UnitTests.csproj
@@ -14,6 +14,7 @@
       </PackageReference>
       <PackageReference Include="FluentAssertions" Version="8.8.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+      <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="xunit" Version="2.5.3" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
         <PrivateAssets>all</PrivateAssets>
@@ -26,6 +27,7 @@
     </ItemGroup>
     
     <ItemGroup>
+      <ProjectReference Include="..\..\SG.AuthService.Application\SG.AuthService.Application.csproj" />
       <ProjectReference Include="..\..\SG.AuthService.Domain\SG.AuthService.Domain.csproj" />
     </ItemGroup>
 
