Ambos servicios: Dejo los dos appsettings igual para que se comuniquen correctamente

--- a/src/Services/AccountService/SG.AccountService.API/appsettings.json
+++ b/src/Services/AccountService/SG.AccountService.API/appsettings.json
@@ -10,8 +10,8 @@
   },
   "Jwt": {
     "Key": "USER_SECRET",
-    "Issuer": "SGFinancial.AuthService",
-    "Audience": "SGFinancial.AccountService"
+    "Issuer": "SG.AuthService",
+    "Audience": "SG.Microservices"
   },
   "AllowedHosts": "*"
 }
