--- a/src/Services/AuthService/SG.AuthService.API/appsettings.json
+++ b/src/Services/AuthService/SG.AuthService.API/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "CADENA_DE_CONEXION"
   },
-  "JwtSettings": {
-    "Secret": "USER_SECRET",
+  "Jwt": {
+    "Key": "USER_SECRET",
     "Issuer": "SG.AuthService",
     "Audience": "SG.Microservices",
     "ExpiryMinutes": 120
