--- a/src/Services/AuthService/SG.AuthService.API/SG.AuthService.API.csproj
+++ b/src/Services/AuthService/SG.AuthService.API/SG.AuthService.API.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-      <UserSecretsId>52623b3e-aa2c-47ca-ade3-2d886252a0c2</UserSecretsId>
-  </PropertyGroup>
+        <UserSecretsId>52623b3e-aa2c-47ca-ade3-2d886252a0c2</UserSecretsId>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.9" />
-      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.24" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.9"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.24"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SG.AuthService.Application\SG.AuthService.Application.csproj" />
-      <ProjectReference Include="..\SG.AuthService.Infrastructure\SG.AuthService.Infrastructure.csproj" />
+        <ProjectReference Include="..\SG.AuthService.Application\SG.AuthService.Application.csproj"/>
+        <ProjectReference Include="..\SG.AuthService.Infrastructure\SG.AuthService.Infrastructure.csproj"/>
     </ItemGroup>
-
 </Project>
